--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UK Pre-Entry Health Screening</title>
   </head>
-  <body>
+  <body class="govuk-template__body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
