modular components - list/heading/container; fixed whitespace and DOMNesting warning

--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="govuk-template">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UK Pre-Entry Health Screening</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body class="govuk-template__body">
     <div id="root"></div>
