--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>UK Pre-Entry Health Screening</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
-    <link rel="manifest" href="./manifest.json" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/assets/manifest.json" />
+    <link rel="icon" href="/assets/images/favicon.ico" />
   </head>
   <body class="govuk-template__body">
     <div id="root"></div>
