TBBETA-878: change chest xray upload from summary list to tables

--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
     <link rel="manifest" href="/assets/manifest.json" />
     <link rel="icon" href="/assets/images/favicon.ico" />
+    <link rel="stylesheet" href="/assets/sass/govuk-frontend.min.css" />
   </head>
   <body class="govuk-template__body">
     <div id="root"></div>
