--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -10,10 +10,16 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GA_CONFIG_ID%"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
+      globalThis.dataLayer = globalThis.dataLayer || [];
+      function gtag() {dataLayer.push(arguments);}
+
+      gtag("consent", "default", {
+        ad_storage: "denied",
+        analytics_storage: "denied",
+        functionality_storage: "denied",
+        personalization_storage: "denied",
+        security_storage: "granted"
+      });
       gtag("js", new Date());
       gtag("config", "%VITE_GA_CONFIG_ID%");
     </script>
