--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="en" class="govuk-template">
+<html lang="en" class="govuk-template govuk-template--rebranded">
   <head>
     <meta charset="UTF-8" />
     <title>UK Pre-Entry Health Screening</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
+    <meta name="theme-color" content="#1d70b8" />
+    <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" />
+    <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml" />
+    <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#1d70b8" />
+    <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png" />
     <link rel="manifest" href="/assets/manifest.json" />
-    <link rel="icon" href="/assets/images/favicon.ico" />
     <link rel="stylesheet" href="/assets/sass/govuk-frontend.min.css" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GA_CONFIG_ID%"></script>
