--- a/pets-ui/index.html
+++ b/pets-ui/index.html
@@ -14,6 +14,7 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GA_CONFIG_ID%"></script>
     <script>
+      window.gaInitialized = false;
       globalThis.dataLayer = globalThis.dataLayer || [];
       function gtag() {dataLayer.push(arguments);}
 
@@ -25,7 +26,9 @@
         security_storage: "granted"
       });
       gtag("js", new Date());
-      gtag("config", "%VITE_GA_CONFIG_ID%");
+      gtag("config", "%VITE_GA_CONFIG_ID%", {
+        on_ready: () => window.gaInitialized = true
+      });
     </script>
   </head>
   <body class="govuk-template__body">
